# orocos_kdl_electric_with_extensions

./: .gitignore  repository.rosinstall  rosdep.yaml
orocos_kdl/: CMakeLists.txt  Makefile  manifest.xml
orocos_kdl/applications/: ToDoKDL  letterHerman
orocos_kdl/applications/docs/: newNotes  to-do-kdl.org  zeromqFeatures
orocos_kdl/applications/experiments/: temp-rne040512-dynamics  temp-rne040512-static  temp-ver030512-noqdotdot  temp-ver040512-noqdotdot-dynamic-I=H  temp-ver040512-noqdotdot-static-I=H  test4dof-actual  test4dof-control  test4dof-control-joints  test4dof-control-joints-matlab  test4dof-control-matlab  test4dof-desired
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case01/: readme  tempQDotCase1
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case02/: tempPoseCase2  tempQDotDotCase2  tempXDotDotCase2
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case03/: tempPoseCase3
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case04/: readme  tempPoseCase4  tempQDotCase4  tempQDotDotCase4
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case06/: readme  tempCartDataCase6
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case07/: tempJointDataCase7
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case08/: readme  tempCartDataSetup1Case8  tempCartDataSetup2Case8  tempCartDataSetup3Case8  tempCartDataSetup4Case8  tempJointDataSetup1Case8  tempJointDataSetup2Case8  tempJointDataSetup3Case8  tempJointDataSetup4Case8
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case09/: readme  tempCartDataCase9  tempJointDataCase9
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case1/: tempPoseCase1  tempQDotDotCase1  tempXDotDotCase1
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case11/: readme  tempCartDataCase11  tempJointDataCase11
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case12/: plot.eps  plotter.plt  readme  tempCartDataCase12-AB2-AM3  tempCartDataCase12-AB2-AM3-conf  tempCartDataCase12-Euler  tempCartDataCase12-Euler-conf  tempJointDataCase12-AB2-AM3  tempJointDataCase12-AB2-AM3-conf  tempJointDataCase12-Euler  tempJointDataCase12-Euler-conf
orocos_kdl/applications/experiments/experiments-ijrr-05-08-2011/case13/: plotter.plt  readme  tempCartDataCase13-Euler-CLIK-Actual-no-control-no-constraint  tempCartDataCase13-Euler-CLIK-Actual-no-control-with-constraint  tempCartDataCase13-Euler-CLIK-Actual-with-control-with-constraint  tempCartDataCase13-Euler-CLIK-Desired  (+3 more)
orocos_kdl/applications/src/: simpleKDLTree.cpp  vereshchagintest-1-dof.cpp  vereshchagintest-2-dof-ab3-am2.cpp  vereshchagintest-2-dof-motion-matlab.cpp  vereshchagintest-2-dof-motion.cpp  vereshchagintest-2-dof-setpoint.cpp  vereshchagintest-4-dof-motion-matlab.cpp  vereshchagintest-4-dof-motion-with-posture-matlab.cpp  vereshchagintest-4-dof-motion.cpp  vereshchagintest-kdl-parser.cpp  vereshchagintest-lwr-motion-matlab.cpp  vereshchagintest-youbot-motion-matlab.cpp  vereshchagintest-youbot-motion.cpp  vereshchagintest.cpp  vereshchagintest_ver2.cpp  youbotspecs
orocos_kdl/applications/src/algortihm/: chainidsolver_constraint_vereshchagin.hpp  treeidsolver_vereshchagin.hpp
orocos_kdl/include/kdl/: treeidsolver_constraint_vereshchagin.hpp
orocos_kdl/install_dir/include/kdl/: segment.hpp
orocos_kdl/nbproject/: Package-Default.bash  configurations.xml  project.xml
orocos_kdl/nbproject/private/: Default.properties  configurations.xml  private.xml
orocos_kdl/src/: chainhdsolver_vereshchagin.cpp  chainhdsolver_vereshchagin.hpp  chainidsolver_recursive_newton_euler.cpp  chainidsolver_vereshchagin.cpp  chainidsolver_vereshchagin.cppOrig  chainidsolver_vereshchagin.cppRubenCorrected  chainidsolver_vereshchagin.hpp  chainidsolver_vereshchagin.hppRubenCorrected  chainidsolver_vereshchagin_three_sweep_ver.cpp  tree.cpp  treeidsolver.hpp  treeidsolver_vereshchagin.cpp  treeidsolver_vereshchagin.hpp
orocos_kdl/tests/: solvertest.cpp  solvertest.hpp
orocos_kdl/vpproject/: orocos_kdl.vpp
orocos_kdl_extensions/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  test-fext.ps
orocos_kdl_extensions/examples/: chain_composition_geometricsemantics.cpp  chain_composition_geometricsemantics_json.cpp  composition_geometricsemantics.cpp  composition_geometricsemantics_compact.cpp  composition_geometricsemantics_ver2.cpp  compositiontest.cpp
orocos_kdl_extensions/include/kdl_extensions/: chain_geometric_primitives.hpp  computationalstate_kdl.hpp  computationalstate_kdltypes.hpp  functionalcomputation.hpp  functionalcomputation_kdl.hpp  functionalcomputation_kdltypes.hpp  functionalcomputation_util.hpp  geometric_semantics_kdl.hpp  json_to_semantics_parser.hpp  treeid_vereshchagin_composable.hpp  treeid_vereshchagin_composable.hpp~
orocos_kdl_extensions/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-AdvancedExample.bash  Package-Default.bash  Package-UnitTests.bash  configurations.xml  project.xml
orocos_kdl_extensions/nbproject/private/: AdvancedExample.properties  configurations.xml  private.xml
orocos_kdl_extensions/src/: compositiontest.cpp  computationalstate_kdl.cpp  computationalstate_kdltypes.cpp  functionalcomputation.inl  json_to_semantics_parser.cpp  treeid_vereshchagin_composable.cpp
orocos_kdl_extensions/tests/: CMakeLists.txt  accTwistOperationTest.cpp  accTwistOperationTest.hpp  composeOperationTest.cpp  composeOperationTest.hpp  fkposition.cpp  fkposition2.cpp  fkvelocity.cpp  forceOperationTest.cpp  forceOperationTest.hpp  inversedynamics-test.cpp  inversedynamics.cpp  inversedynamics2.cpp  poseOperationTest.cpp  poseOperationTest.hpp  poseoperation4treelink-test.cpp  simpleFPGATest.cpp  testrunner.cpp  traverseOperationTest.cpp  traverseOperationTest.h  twistOperationTest.cpp  twistOperationTest.hpp  twistoperation4treelink-test.cpp
orocos_kdl_extensions/vpproject/: orocos_kdl_extensions.vpp
(+121 files in other folders)
